# bobbycar-boardcomputer-firmware

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  app-flash.sh  backtrace.sh  bobbycar.csv  bobbycar_noota.csv  config_allfeatures.cmake  config_comred.cmake  config_comred_new.cmake  config_feedc0de.cmake  config_feedc0de_new.cmake  config_gernot.cmake  config_greyhash.cmake  config_mick.cmake  config_nofeatures.cmake  config_peter.cmake  config_seatbot.cmake  config_testdevice.cmake  export.sh  generate-icons.sh  icon_templ.cpp.tmpl  icon_templ.h.tmpl  ignore.tar.gz.gpg  init_ide.sh  monitor.sh  open_ide.sh  partitions_16M_ota.csv  partitions_4M_noota.csv  platformio.ini  sdkconfig  sdkconfig_allfeatures  sdkconfig_comred  sdkconfig_feedc0de  sdkconfig_feedc0de_new  sdkconfig_gernot  sdkconfig_greyhash  (+9 more)
main/: CMakeLists.txt  accessorhelpers.h  actioninterface.h  battery.cpp  battery.h  ble.h  ble_bobby.cpp  ble_bobby.h  bletexthelpers.h  bluetooth_bobby.cpp  bluetooth_bobby.h  bluetoothmode.h  bluetoothtexthelpers.h  bmsutils.h  bobby_webserver.h  bobbyblinker.cpp  bobbyblinker.h  bobbybuttons.cpp  bobbybuttons.h  bobbycheckbox.h  bobbyerrorhandler.cpp  bobbyerrorhandler.h  bobbyhupe.cpp  bobbyhupe.h  bobbyquickactions.cpp  bobbyquickactions.h  bobbyschedulertask.h  bobbytypesafeenum.h  buildserver.cpp  buildserver.h  buttons.cpp  buttons.h  can.cpp  can.h  changevaluedisplay.h  changevaluedisplay_bluetoothmode.h  changevaluedisplay_bobbyquickactions.cpp  changevaluedisplay_bobbyquickactions.h  changevaluedisplay_bool.h  changevaluedisplay_controlmode.cpp  (+147 more)
main/accessors/: globalaccessors.cpp  globalaccessors.h  settingsaccessors.h  wifiaccessors.cpp  wifiaccessors.h  wifiapconfigaccessors.cpp  wifiapconfigaccessors.h  wifistaconfigaccessors.cpp  wifistaconfigaccessors.h
main/actions/: assertaction.cpp  assertaction.h  backproxyaction.h  bluetoothbeginaction.cpp  bluetoothbeginaction.h  bluetoothbeginmasteraction.h  bluetoothconnectbmsaction.h  bluetoothdisconnectaction.h  bluetoothendaction.h  bluetoothflushaction.h  bmsturnoffchargeaction.h  bmsturnoffdischargeaction.h  bmsturnonchargeaction.h  bmsturnondischargeaction.h  defaultmodeapplycurrspeedaction.h  dividebyzeroaction.cpp  dividebyzeroaction.h  erasenvsaction.h  ledstripanimationactions.cpp  ledstripanimationactions.h  ledstripblinkactions.cpp  ledstripblinkactions.h  loadsettingsaction.h  modesettingsaction.cpp  modesettingsaction.h  qraction.cpp  qraction.h  rebootaction.cpp  rebootaction.h  resetnvsaction.cpp  resetnvsaction.h  savesettingsaction.h  selectbuildserveraction.h  setupactions.cpp  setupactions.h  switchapppartitionaction.cpp  switchapppartitionaction.h  switchprofileaction.h  tempomatmodeapplycurrentpeedaction.h  toggleboolaction.h  (+13 more)
main/displays/: batterygraphdisplay.cpp  batterygraphdisplay.h  batteryinfodisplay.cpp  batteryinfodisplay.h  bmsdisplay.cpp  bmsdisplay.h  bobbychangevaluedisplay.cpp  bobbychangevaluedisplay.h  bobbydisplay.cpp  bobbydisplay.h  bobbydisplaywithtitle.cpp  bobbydisplaywithtitle.h  bobbygraphdisplay.cpp  bobbygraphdisplay.h  bobbymenudisplay.cpp  bobbymenudisplay.h  bobbypopupdisplay.cpp  bobbypopupdisplay.h  bobbysplitgraphdisplay.cpp  bobbysplitgraphdisplay.h  buttoncalibratedisplay.cpp  buttoncalibratedisplay.h  calibratedisplay.cpp  calibratedisplay.h  calibratevoltagedisplay.cpp  calibratevoltagedisplay.h  confiscationdisplay.cpp  confiscationdisplay.h  dpad5wire2outdebugdisplay.h  dpad6wiredebugdisplay.h  gameoflifedisplay.cpp  gameoflifedisplay.h  gametrakcalibratedisplay.h  garagedisplay.cpp  garagedisplay.h  graphdisplay.h  joystickdebugdisplay.cpp  joystickdebugdisplay.h  ledstripcolorsdisplay.cpp  ledstripcolorsdisplay.h  (+32 more)
main/guihelpers/: bobbychangevaluedisplay.h  bobbycheckbox.h  bobbycheckboxicon.h  bobbydisplay.cpp  bobbydisplay.h  bobbydisplaywithtitle.cpp  bobbydisplaywithtitle.h  bobbyerrorhandler.cpp  bobbyerrorhandler.h  bobbygraphdisplay.h  bobbymenudisplay.cpp  bobbymenudisplay.h  bobbypopupdisplay.cpp  bobbypopupdisplay.h  bobbysplitgraphdisplay.h  menudisplaywithtime.cpp  menudisplaywithtime.h
main/icons/: alert.cpp  alert.h  alert_grey.cpp  alert_grey.h  back.cpp  back.h  back_grey.cpp  back_grey.h  battery.cpp  battery.h  battery_grey.cpp  battery_grey.h  bluetooth.cpp  bluetooth.h  bluetooth_grey.cpp  bluetooth_grey.h  bms.cpp  bms.h  bms_grey.cpp  bms_grey.h  bobbycar.cpp  bobbycar.h  buzzer.cpp  buzzer.h  buzzer_grey.cpp  buzzer_grey.h  checked.cpp  checked.h  checked_grey.cpp  checked_grey.h  close.cpp  close.h  close_grey.cpp  close_grey.h  demos.cpp  demos.h  demos_grey.cpp  demos_grey.h  git.cpp  git.h  (+74 more)
main/modes/: defaultmode.cpp  defaultmode.h  gametrakmode.cpp  gametrakmode.h  ignoreinputmode.cpp  ignoreinputmode.h  larsmmode.cpp  larsmmode.h  mickmode.cpp  mickmode.h  motortestmode.cpp  motortestmode.h  remotecontrolmode.cpp  remotecontrolmode.h  tempomatmode.cpp  tempomatmode.h  wheelchairmode.cpp  wheelchairmode.h
main/screens/: aboutmenu.cpp  aboutmenu.h  batterydebugmenu.cpp  batterydebugmenu.h  batterygraphdisplay.cpp  batterygraphdisplay.h  batteryinfodisplay.cpp  batteryinfodisplay.h  batterymenu.cpp  batterymenu.h  blesettingsmenu.cpp  blesettingsmenu.h  bluetoothsettingsmenu.h  bmsdisplay.cpp  bmsmenu.cpp  bmsmenu.h  boardcomputerhardwaresettingsmenu.cpp  boardcomputerhardwaresettingsmenu.h  buzzermenu.cpp  buzzermenu.h  calibratevoltagedisplay.cpp  calibratevoltagedisplay.h  candebugmenu.cpp  candebugmenu.h  cloudsettingsmenu.cpp  cloudsettingsmenu.h  commanddebugmenu.h  confiscationdisplay.cpp  confiscationdisplay.h  controllerhardwaresettingsmenu.cpp  controllerhardwaresettingsmenu.h  crashmenu.cpp  crashmenu.h  debugmenu.cpp  debugmenu.h  defaultmodesettingsmenu.cpp  defaultmodesettingsmenu.h  demosmenu.cpp  demosmenu.h  dynamicdebugmenu.cpp  (+143 more)
main/texthelpers/: bletexthelpers.h  bluetoothtexthelpers.h  cloudtexthelpers.cpp  cloudtexthelpers.h  debugtexthelpers.h  esptexthelpers.h  networktexthelpers.cpp  networktexthelpers.h  wifiaptexthelpers.cpp  wifiaptexthelpers.h  (+4 more)
src/: can.h  (+48 more)
(+303 files in other folders)
